# Taurus

./: .gitmodules  CMakeLists.txt  readme.md  test.cc
docs/: overview.md
src/: battle-heuristic.hh  battle-surskit.hh  vs.hh
tests/: arena.cc  b128.cc  bad-search.cc  battle-copy.cc  bslam-test.cc  copy-test.cc  eee.cc  engine-wrapper.cc  exp3-battle-test.cc  exp3-battle-thread.cc  exp3-off-policy-test.cc  expl-test-vector.cc  gmp.cc  h-vs-mc.cc  matrix-solve.cc  random-tree-expl.cc  random-tree-expl.h  random-tree-gen.cc  random-tree-test.cc  rational.cc  rollout-test.cc  solve_imported_matrix.cc  surskit-basic-test.cc  test.hh  test2.hh  thread-test.hh  tree-cleanup-test.hh  vs.hh  wrapsire-main.cc
